--- a/resources/css/home/cadastro-usuario.css
+++ b/resources/css/home/cadastro-usuario.css
@@ -17,16 +17,22 @@
 .email {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-nome {
-  padding-right: 1rem;
+  padding-right: 5rem;
   padding-bottom: 1rem;
 }
 
 .nome {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-genero {
@@ -37,26 +43,36 @@
 .genero {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
+  cursor: pointer;
 }
 
 .container-cpf {
-  padding-right: 12rem;
+  padding-right: 22rem;
   padding-bottom: 1rem;
 }
 
 .cpf {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-celular {
-  padding-right: 1rem;
+  padding-right: 22rem;
   padding-bottom: 1rem;
 }
 
 .celular {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-radio-buttons {
@@ -87,33 +103,42 @@
 }
 
 .container-cep {
-  padding-right: 19rem;
+  padding-right: 24rem;
   padding-bottom: 1rem;
 }
 
 .cep {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-rua {
-  padding-right: 10rem;
+  padding-right: 5rem;
   padding-bottom: 1rem;
 }
 
 .rua {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-numero {
-  padding-right: 19rem;
+  padding-right: 24rem;
   padding-bottom: 1rem;
 }
 
 .numero {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-bairro {
@@ -124,6 +149,9 @@
 .bairro {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-cidade {
@@ -134,16 +162,23 @@
 .cidade {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-uf {
-  padding-right: 19rem;
+  padding-right: 25rem;
   padding-bottom: 1rem;
 }
 
 .uf {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
+  cursor: pointer;
 }
 
 .container-senha {
@@ -154,6 +189,9 @@
 .senha {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-confirma_senha {
@@ -164,19 +202,22 @@
 .confirma_senha {
   border: none;
   font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  border: none;
 }
 
 .container-submit {
-  padding-left: 21rem;
+  padding-left: 19rem;
   padding-bottom: 1rem;
-  padding-top: 1rem;
 }
 
 .submit {
   background-color: #DF3770;
   color: #FFFFFF;
-  font-size: 20px;
-  padding: 4px;
+  font-size: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
   border: none;
   cursor: pointer;
 }
