--- a/resources/css/user/perfil-cuidador.css
+++ b/resources/css/user/perfil-cuidador.css
@@ -72,6 +72,19 @@
   padding-right: 0.5rem;
 }
 
+.container-historico-clientes {
+  padding-top: 2rem;
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 450px;
+  width: 100%;
+}
+
+.container-historico-clientes .row {
+  padding-bottom: 2rem;
+  width: 100%;
+}
+
 .imagem-perfil-cliente {
   width: 80px;
   height: 80px;
