--- a/resources/css/home/cadastro-usuario.css
+++ b/resources/css/home/cadastro-usuario.css
@@ -59,7 +59,7 @@
 }
 
 .container-celular {
-  padding-right: 22rem;
+  padding-right: 20rem;
   padding-bottom: 1rem;
 }
 
@@ -207,4 +207,75 @@
   padding-left: 10px;
   border: none;
   cursor: pointer;
+}
+
+@media(max-width: 425px) {
+  .usuario {
+    padding-left: 0;
+  }
+
+  .col-6 {
+    max-width: none;
+    flex: none;
+  }
+
+  .container-email {
+    padding-right: 6rem;
+  }
+
+  .container-genero {
+    padding-right: 12rem;
+  }
+
+  .container-cpf {
+    padding-right: 13rem;
+  }
+
+  .container-celular {
+    padding-right: 11rem;
+  }
+
+  .checkbox-cuidador {
+    padding-bottom: 2rem;
+  }
+
+  .division-line {
+    display: none;
+  }
+
+  .container-cep {
+    padding-right: 14rem;
+  }
+
+  .container-rua {
+    padding-right: 2rem;
+  }
+
+  .container-numero {
+    padding-right: 15rem;
+  }
+
+  .container-bairro {
+    padding-right: 7rem;
+  }
+
+  .container-cidade {
+    padding-right: 7rem;
+  }
+
+  .container-uf {
+    padding-right: 16rem;
+  }
+
+  .container-senha {
+    padding-right: 7rem;
+  }
+
+  .container-confirma_senha {
+    padding-right: 7rem;
+  }
+
+  .container-submit {
+    padding-left: 5rem;
+  }
 }
