--- a/resources/css/home/style.css
+++ b/resources/css/home/style.css
@@ -79,6 +79,8 @@ span {
 
 .container-logo {
   padding-left: 31rem;
+  position: absolute;
+  text-align: center;
 }
 
 .rodapePrincipal-logo {
@@ -87,6 +89,7 @@ span {
 }
 
 .rodapePrincipal-newsletter-form {
+  float: right;
   text-align: center;
   width: 25%;
 }
@@ -124,4 +127,41 @@ span {
   margin-bottom: 10px;
   color: #FFFFFF;
   font-size: 15px;
+}
+
+@media(max-width: 425px) {
+  .container-descricao {
+    flex-direction: column;
+  }
+
+  .conteudoPrincipal-logo {
+    width: 350px;
+    height: 270px;
+    object-fit: cover;
+  }
+
+  .descricao-titulo {
+    padding-left: 6.5rem;
+  }
+
+  .container-logo {
+    padding-left: 1rem;
+    flex-direction: column;
+  }
+
+  .rodapePrincipal-newsletter-form {
+    width: 50%;
+  }
+
+  .imagem-carousel {
+    height: 250px;
+  }
+
+  .imagem-carousel2 {
+    height: 250px;
+  }
+
+  .imagem-carousel3 {
+    height: 250px;
+  }
 }
