--- a/resources/css/home/tela-login.css
+++ b/resources/css/home/tela-login.css
@@ -103,3 +103,57 @@ body {
   width: 159px;
   height: 83px;
 }
+
+@media(max-width: 425px) {
+.container-form {
+  flex-direction: column;
+}
+
+.form-login {
+  height: auto;
+  width: auto;
+  padding-left: 2rem;
+}
+
+.text-login {
+  padding-top: 2rem;
+}
+
+.container-button-login {
+  padding-left: 0;
+}
+
+.container-imagem-cachorro1 {
+  display: none;
+}
+
+.division-line {
+  display: none;
+}
+
+.container-cadastrese {
+  height: auto;
+  width: auto;
+  padding-left: 0;
+}
+
+.text-cadastrese {
+  display: none;
+}
+
+.container-button-cadastrese {
+  padding-left: 2rem;
+}
+
+.container-imagem-cachorro2 {
+  display: none;
+}
+
+footer {
+    position: fixed;
+    bottom:0;
+    left:0;
+    width: 100%;
+}
+
+}
