--- a/resources/css/user/editar-perfil-cliente.css
+++ b/resources/css/user/editar-perfil-cliente.css
@@ -17,6 +17,10 @@
   padding-top: 1rem;
 }
 
+.text-area {
+  resize: none;
+}
+
 .container-input-celular {
   padding-right: 21rem;
   margin-bottom: 1rem;
@@ -52,4 +56,76 @@
   border: none;
   cursor: pointer;
   font-size: 20px;
+}
+
+@media(max-width: 425px) {
+  .col-3 {
+    max-width: none;
+    flex: none;
+  }
+
+  .col-6 {
+    max-width: none;
+    flex: none;
+  }
+
+  .container-imagem-perfil {
+    padding-left: 6rem;
+  }
+
+  .container-button-escolher-imagem {
+    padding-left: 6rem;
+    padding-right: 2rem;
+  }
+
+  .container-icones-animais {
+    padding-left: 4.5rem;
+  }
+
+  .nome-cliente {
+    font-size: 20px;
+    padding-left: 7rem;
+  }
+
+  .text-tier-cliente {
+    font-size: 17px;
+    padding-left: 7rem;
+  }
+
+  .container-tier-cliente {
+    padding-left: 7.5rem;
+  }
+
+  .text-cuidados-realizados {
+    font-size: 18px;
+    padding-left: 8.5rem;
+  }
+
+  .cuidados-realizados {
+    font-size: 18px;
+    padding-left: 8.5rem;
+  }
+
+  .text-descricao-cliente {
+    font-size: 30px;
+    padding-top: 2rem;
+  }
+
+  .text-servicos {
+    font-size: 30px;
+  }
+
+  .form-control {
+    width: auto;
+  }
+
+  .container-button-tornarse-cuidador {
+    padding-left: 5.5rem;
+  }
+
+  .container-button-salvar {
+    padding-left: 9rem;
+    padding-top: 1rem;
+  }
+
 }
