--- a/resources/css/user/perfil-cliente.css
+++ b/resources/css/user/perfil-cliente.css
@@ -27,6 +27,14 @@
 .container-pets {
   padding-top: 2rem;
   padding-bottom: 3rem;
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 200px;
+  width: 100%;
+}
+
+.container-pets .row {
+  padding-bottom: 1rem;
 }
 
 .imagem-perfil-cachorro {
@@ -56,7 +64,7 @@
 
 .icone-adicionar-pets {
   position: absolute;
-  padding-top: 6rem;
+  padding-top: 2rem;
   cursor: pointer;
 }
 
@@ -119,4 +127,79 @@
   position: absolute;
   padding-top: 21rem;
   cursor: pointer;
+}
+
+.page-footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1030;
+}
+
+@media(max-width: 425px) {
+  .col {
+    max-width: none;
+    flex: none;
+  }
+
+  .col-6 {
+    max-width: none;
+    flex: none;
+  }
+
+  .col-md-auto {
+    width: auto;
+  }
+
+  .col-5 {
+    max-width: none;
+  }
+
+  .col-7 {
+    max-width: none;
+  }
+
+  .container-imagem-perfil {
+    padding-left: 6rem;
+  }
+
+  .nome-cliente {
+    font-size: 20px;
+    padding-left: 7rem;
+  }
+
+  .text-tier-cliente {
+    font-size: 17px;
+    padding-left: 7rem;
+  }
+
+  .container-tier-cliente {
+    padding-left: 7.5rem;
+  }
+
+  .container-icone-adicionar-pet {
+    padding-bottom: 2rem;
+  }
+
+  .icone-adicionar-pets {
+    width: 18px;
+  }
+
+  .container-pets {
+    padding-left: 2rem;
+  }
+
+  .icone-editar-pets {
+    width: 20px;
+  }
+
+  .text-descricao-cliente {
+    font-size: 30px;
+    padding-top: 4rem;
+  }
+
+  .page-footer{
+    position: inherit;
+  }
 }
