--- a/resources/css/user/editar-pet.css
+++ b/resources/css/user/editar-pet.css
@@ -58,6 +58,26 @@
   outline: 0;
 }
 
+.container-tipoAnimal {
+  padding-right: 29rem;
+  padding-left: 29rem;
+  padding-bottom: 1rem;
+}
+
+.text-tipoAnimal {
+  padding-left: 4.9rem;
+  font-size: 15px;
+  color: #DF3770;
+}
+
+.tipoAnimal {
+  border: none;
+  font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  cursor: pointer;
+}
+
 .container-genero {
   padding-right: 29rem;
   padding-left: 29rem;
@@ -78,16 +98,74 @@
   cursor: pointer;
 }
 
-.container-button-salvar {
+.container-button-finalizar {
   padding-top: 1rem;
   padding-left: 33rem;
   padding-bottom: 1rem;
 }
 
-.salvar {
+.finalizar {
   background-color: #DF3770;
   color: #FFFFFF;
   font-size: 17px;
   border: none;
   cursor: pointer;
+}
+
+@media(max-width: 425px) {
+  .container-imagem-perfil {
+    padding-left: 8rem;
+  }
+
+  .container-button-escolher-imagem {
+    padding-left: 5rem;
+    padding-right: 3rem;
+  }
+
+  .container-nome {
+    padding-right: 4rem;
+    padding-left: 5rem;
+  }
+
+  .text-nome {
+    padding-left: 4rem;
+  }
+
+  .container-raca {
+    padding-right: 4rem;
+    padding-left: 5rem;
+  }
+
+  .text-raca {
+    padding-left: 5.5rem;
+  }
+
+  .container-tipoAnimal {
+    padding-right: 7rem;
+    padding-left: 7rem;
+  }
+
+  .text-tipoAnimal {
+    padding-left: 2.9rem;
+  }
+
+  .container-genero {
+    padding-right: 7rem;
+    padding-left: 7rem;
+  }
+
+  .text-genero {
+    padding-left: 3.5rem;
+  }
+
+  .container-button-finalizar {
+    padding-left: 9.5rem;
+  }
+
+  footer {
+      position: fixed;
+      bottom:0;
+      left:0;
+      width: 100%;
+  }
 }
