--- a/resources/css/user/novo-perfil-cuidador.css
+++ b/resources/css/user/novo-perfil-cuidador.css
@@ -72,6 +72,10 @@
   padding-bottom: 2rem;
 }
 
+.text-area {
+  resize: none;
+}
+
 .container-input-celular {
   padding-right: 21rem;
   margin-bottom: 1rem;
@@ -94,4 +98,18 @@
   border: none;
   cursor: pointer;
   font-size: 20px;
+}
+
+@media(max-width: 425px) {
+  .container-button-escolher-imagem {
+    padding-right: 2rem;
+  }
+
+  .text-animais {
+    font-size: 25px;
+  }
+
+  .container-button-salvar {
+    padding-left: 9rem;
+  }
 }
