--- a/resources/css/user/cadastra-pets.css
+++ b/resources/css/user/cadastra-pets.css
@@ -37,6 +37,7 @@
   font-size: 15px;
   border-radius: 10px;
   outline: 0;
+  padding-left: 1rem;
 }
 
 .container-raca {
@@ -56,6 +57,28 @@
   font-size: 15px;
   border-radius: 10px;
   outline: 0;
+  padding-left: 1rem;
+}
+
+.container-tipoAnimal {
+  padding-right: 29rem;
+  padding-left: 29rem;
+  padding-bottom: 1rem;
+}
+
+.text-tipoAnimal {
+  padding-left: 4rem;
+  font-size: 15px;
+  color: #DF3770;
+}
+
+.tipoAnimal {
+  border: none;
+  font-size: 15px;
+  border-radius: 10px;
+  outline: 0;
+  cursor: pointer;
+  padding-left: 1rem;
 }
 
 .container-genero {
@@ -76,6 +99,7 @@
   border-radius: 10px;
   outline: 0;
   cursor: pointer;
+  padding-left: 1rem;
 }
 
 .container-button-salvar {
