--- a/resources/css/user/perfil-cliente.css
+++ b/resources/css/user/perfil-cliente.css
@@ -47,10 +47,15 @@
   font-size: 12px;
 }
 
-.raca-pet {
+.tipo-pet {
   color: #DF3770;
   font-size: 12px;
   padding-top: 1rem;
+}
+
+.raca-pet {
+  color: #DF3770;
+  font-size: 12px;
 }
 
 .sexo-pet {
